# web-raider

./: .gitignore  .google-cookie  README.md  Survey_Qns.csv  data_analytics.py  main.py  pipeline.py  pyproject.toml  query_results.jsonl  requirements.txt  results.jsonl  tox.ini
.github/workflows/: tests.yml
assets/: key_import.py  model_calls.py  placeholder.py  prompts.py  relevance.py
src/: article.py  articles.py  codebase.py  connection_manager.py  constants.py  evaluate.py  model_calls.py  pipeline.py  search.py  shortlist.py  url_classifier.py  utils.py
tests/: test_article.py  test_forum.py  test_search.py  test_web_raider.py
web-raider/: article.py  connection_manager.py  pipeline.py  search.py  shortlist.py  utils.py
web-raider-venv/: pyvenv.cfg
web-raider-venv/Scripts/: activate  activate.bat  google  jp.py
web_raider/: __init__.py  article.py  codebase.py  connection_manager.py  constants.py  evaluate.py  forums.py  model_calls.py  pipeline.py  search.py  shortlist.py  url_classifier.py
web_raider/assets/: __init__.py  key_import.py  prompts.py
