[tool.poetry]
name = "web-raider"
version = "0.1.0"
description = "Web Raider"
authors = ["Prannaya <prannayagupta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
newspaper3k = "^0.2.8"
googlesearch-python = "^1.2.5"
lxml = {extras = ["html-clean"], version = "^5.3.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
