[tool.poetry]
name = "web-raider"
version = "0.1.0"
description = "Web Raider"
authors = ["Prannaya <prannayagupta@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
newspaper3k = "^0.2.8"
googlesearch-python = "^1.2.5"
lxml = {extras = ["html-clean"], version = "^5.3.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-sugar = "*"
pytest-cov = "*"
black = "*"
mypy = "*"
ruff = "*"
isort = "*"
tox = "^4.11.4"
ipykernel = "^6.29.5"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
